# anyvoice

./: .env.example  .gitignore  .vercelignore  README.md  auth.ts  eslint.config.mjs  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  requirements-voxcpm.txt  vitest.config.ts
.githooks/: pre-commit  pre-push
app/: globals.css  layout.tsx  page.tsx
comfyui-anyvoice/: README.md  __init__.py  pyproject.toml  requirements.txt
comfyui-anyvoice/anyvoice_comfy/: __init__.py  comfy_audio.py  enroll.py  env.py  nodes.py  reference_import.py  synth.py  textgate.py  youtube.py
comfyui-anyvoice/example_workflows/: AnyVoice Audio File Voice Clone.json  AnyVoice Record Voice Clone.json  AnyVoice Voice Clone.json  AnyVoice YouTube Voice Clone.json
comfyui-anyvoice/tests/: conftest.py  test_comfy_audio.py  test_enroll.py  test_reference_import.py  test_textgate.py  test_workflow_json.py  test_youtube.py
components/: BookReader.tsx  VoiceCloneStudio.tsx
design/: mockup.html
docs/: AUDIOBOOK.md  DESIGN_DIRECTION.md  HANDOFF_PORT_SPEC.md  PRD.md  SIMPLIFICATION.md  TODO.md  VOICE_CLONE_10X_PLAN.md  recording-experience-roadmap.html
e2e/: smoke.spec.ts
examples/: voice_backend_renders.example.json  voice_clone_eval_set.json  voice_profile_import_manifest.example.json  voice_profile_import_manifest.extended.zh-Hant.json
lib/: book-extract.ts  book-job.ts  book-segment.ts  book-synthesizer.ts  clone-config.ts  clone-request.ts  clone-runner.ts  clone-stream.ts  mandarin-phonemes.ts  profile-clone-input.ts  run-history.ts  (+17 more)
(+168 files in other folders)
